<resources>
    <string name="app_name">Atmintis</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_now">Register Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact_details">Contact Details</string>
    <string name="shooting_date">shooting Date</string>
    <string name="cover_date">Cover Date</string>
    <string name="total_number_of_days_event">Total Number of Days Event</string>
    <string name="event_type">Event Type</string>
    <string name="submit">Submit</string>
    <string name="registered_email">Registered Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="help">Help</string>
    <string name="order">Order</string>
    <string name="photos">Photos</string>
    <string name="about_us">About Us</string>
    <string name="this_page_is_under_process">This page is under process</string>
</resources>
