<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registpage2"
        android:background="#fff"
        android:orientation="vertical">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                    android:src="@drawable/b"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/imageView3"/>
            <EditText
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/name"
                    android:textColorHint="#727272"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edittextstyle"
                    android:id="@+id/ed1"/>
            <EditText
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/email"
                    android:textColorHint="#727272"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edittextstyle"
                    android:id="@+id/ed2"/>
            <EditText
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/contact_details"
                    android:textColorHint="#727272"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edittextstyle"
                    android:id="@+id/ed3"/>
            <EditText
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/cover_date"
                    android:textColorHint="#727272"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edittextstyle"
                    android:id="@+id/ed4"/>
            <EditText
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/total_number_of_days_event"
                    android:textColorHint="#727272"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edittextstyle"
                    android:id="@+id/ed5"/>
            <EditText
                    android:inputType=""
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/event_type"
                    android:textColorHint="#727272"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/edittextstyle"
                    android:id="@+id/ed6"/>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bu1"
                    android:background="#880000"
                    android:textColor="#fff"
                    android:textAllCaps="false"
                    android:fontFamily="casual"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:text="@string/submit"
                    android:layout_gravity="center"
            />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

