<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".front" android:orientation="vertical">


    <Button
            android:text="@string/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:background="#880000"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:fontFamily="casual"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="200dp"
            android:textStyle="bold"
    />
    <Button
            android:text="@string/photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:background="#880000"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:fontFamily="casual"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:textStyle="bold"
    />
    <Button

            android:text="@string/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:background="#880000"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:fontFamily="casual"
            android:textStyle="bold"
    />
</LinearLayout>