<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".registpage">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/imageView2"
            android:layout_marginEnd="40dp"
            android:id="@+id/ed1"
            android:layout_marginTop="80dp"
            android:hint="@string/email_address"
            android:textColorHint="#727272"
            android:background="#fff"
            android:textSize="20sp"
            android:textColor="#000"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed1"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/ed2"
            android:layout_marginTop="20dp"
            android:hint="Password"
            android:textColorHint="#727272"
            android:background="#fff"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textColor="#000"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@+id/ed2"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/ed3"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            android:textColorHint="#727272"
            android:background="#fff"
            android:textSize="20sp" android:layout_centerHorizontal="true"
            android:textColor="#000"/>
    <Button
            android:text="@string/register_now"
            android:id="@+id/bu3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/ed3"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            android:background="#727272"
            android:layout_marginBottom="10dp"/>
    <ImageView
            android:src="@drawable/b"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_alignParentTop="true"
            android:id="@+id/imageView2"
            android:layout_marginTop="0dp"/>

</RelativeLayout>