<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".MainActivity">
    <Button

            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="60dp"
            android:layout_marginStart="80dp"
            android:textColor="#003366"
            android:background="#fff"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:id="@+id/bu1"/>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="60dp"
            android:layout_alignRight="@+id/bu1"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="80dp"
            android:id="@+id/bu2"
            android:textColor="#003366"
            android:background="#fff"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textAllCaps="false"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_marginEnd="40dp"
            android:id="@+id/editText"
            android:layout_below="@id/imageView"
            android:layout_marginTop="80dp"
            android:hint="Username"
            android:textColorHint="#727272"
            android:background="#fff"
            android:textSize="20sp"
            android:textColor="#000"/>
    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:inputType="textPassword"
            android:layout_below="@id/editText"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:layout_marginEnd="40dp"
            android:id="@+id/editText2"

            android:hint="Password"
            android:textColorHint="#727272"
            android:background="#fff"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textColor="#000"/>
    <ImageView
            android:src="@drawable/b"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_alignParentTop="true"
            android:id="@+id/imageView"
            android:layout_marginTop="0dp"/>
    <Button
            android:text="@string/reset_password"
            android:layout_width="205dp"
            android:layout_height="59dp"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="134dp"
            android:id="@+id/bu3"
            android:textColor="#003366"
            android:background="#fff"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_centerInParent="true"/>

</RelativeLayout>